fix background attachment fixed on mobile

--- a/web/src/app/banner/banner.module.css
+++ b/web/src/app/banner/banner.module.css
@@ -82,4 +82,8 @@
     line-height: 1.5rem;
     margin-bottom: 2.6rem;
   }
+
+  .banner {
+    background-attachment: scroll;
+  }
 }
